# osay

./: .gitignore  AGENTS.md  Makefile  README.md  osay  pyproject.toml  pytest.ini  say.py
docs/: bdd.md  design.md  ux.md
skills/osay/: SKILL.md
src/osay/: __init__.py  __main__.py  cache.py  cli.py  config.py  key.py  providers.py
tests/: test_cache.py  test_cli.py  test_config.py  test_key.py  test_providers.py
